CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ADD_SUBDIRECTORY(ANN)
ADD_SUBDIRECTORY(base64)
ADD_SUBDIRECTORY(boost)
ADD_SUBDIRECTORY(Eigen)
ADD_SUBDIRECTORY(flann)
ADD_SUBDIRECTORY(google)
ADD_SUBDIRECTORY(iw)
ADD_SUBDIRECTORY(jpeg)
ADD_SUBDIRECTORY(opencv2)
ADD_SUBDIRECTORY(orsa)
ADD_SUBDIRECTORY(png)
ADD_SUBDIRECTORY(pyglog)
ADD_SUBDIRECTORY(scul)
ADD_SUBDIRECTORY(tomato)
ADD_SUBDIRECTORY(zlib)
